--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello world</h1>
-    <p>Welcome to this page</p>
-    <i class="fa-brands fa-linkedin"></i>
-    <i class="fa-solid fa-envelope"></i>
-    <i class="fa-brands fa-github"></i>
+    <div class="hero">
+      <p>Hi, I am</p>
+      <h1>Judite Senkane</h1>
+      <h6 class="mb-5 mt-4">Front-end developer, based in Riga, Latvia</h6>
+      <div>
+        <a href="#" class="btn btn-main">See Projects</a>
+      </div>
+    </div>
   </body>
 </html>
