Added footer and made the website responsive

--- a/index.html
+++ b/index.html
@@ -33,9 +33,28 @@
       <p>Hi, I am</p>
       <h1>Judite Senkane</h1>
       <h6 class="mb-5 mt-4">Front-end developer, based in Riga, Latvia</h6>
-      <div>
-        <a href="#" class="btn btn-main">See Projects</a>
+      <div class="buttons">
+        <div>
+          <a href="#" class="btn btn-main">Projects</a>
+        </div>
+        <div>
+          <a href="#" class="btn btn-secondary">About Me</a>
+        </div>
       </div>
     </div>
+    <footer class="m-5">
+      <p>judite.senkane@gmail.com</p>
+      <div class="media-links mt-5">
+        <div>
+          <a href="#"><i class="fa-brands fa-github"></i></a>
+        </div>
+        <div>
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
+        <div>
+          <a href="#"><i class="fa-solid fa-envelope"></i></a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
