Added work inquiry section to the footer

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
       </div>
     </div>
     <footer class="m-5">
+      <div class="work-inquiry mb-5">
+        <div class="work-inquiry-heading">
+          <h3>Work Inquiry</h3>
+          <p>Let's discuss collaboration or job opportunities</p>
+        </div>
+        <div class="work-inquiry-button">
+          <a href="#" class="btn btn-small-dark">Contact Me</a>
+        </div>
+      </div>
       <p>judite.senkane@gmail.com</p>
       <div class="media-links mt-5">
         <div>
