Added project overview and changed shadow parameters

--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
         </div>
       </div>
     </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mt-5">
+          <a href="#"
+            ><img
+              src="/images/yin-yoga-project.png"
+              alt="Yin Yoga Project"
+              class="img-fluid mb-3"
+          /></a>
+          <h4>Yin Yoga Project</h4>
+          <p>Front-end Developer</p>
+        </div>
+        <div class="col-md-4 mt-5">
+          <a href="#"
+            ><img
+              src="/images/weather-app.png"
+              alt="Weather App"
+              class="img-fluid mb-3"
+          /></a>
+          <h4>Weather App</h4>
+          <p>Front-end Developer</p>
+        </div>
+        <div class="col-md-4 mt-5">
+          <a href="#" alt="Portfolio"
+            ><img
+              src="/images/portfolio.png"
+              alt="Portfolio"
+              class="img-fluid mb-3"
+          /></a>
+          <h4>Portfolio</h4>
+          <p>Front-end Developer</p>
+        </div>
+      </div>
+    </div>
     <footer class="m-5">
       <div class="work-inquiry mb-5">
         <div class="work-inquiry-heading">
