Made the new sections responsive

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
       </div>
     </div>
-    <footer class="m-5">
+    <footer class="mb-5 mt-5">
       <div class="work-inquiry mb-5">
         <div class="work-inquiry-heading">
           <h3>Work Inquiry</h3>
