Created projects page and made it responsive

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
       <h6 class="mb-5 mt-4">Front-end developer, based in Riga, Latvia</h6>
       <div class="buttons">
         <div>
-          <a href="#" class="btn btn-main">Projects</a>
+          <a href="/projects.html" class="btn btn-main">Projects</a>
         </div>
         <div>
           <a href="#" class="btn btn-secondary">About Me</a>
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container homepage">
       <div class="row">
         <div class="col-md-4 mt-5">
           <a href="#"
