Added margin to weather app section

--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
             >Launch Yin Yoga Page</a
           >
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 mb-5">
           <h2 class="mb-5">Weather App</h2>
           <p>
             Weather app was my project for SheCodes Plus, where I used APIs and
