Added media links

--- a/projects.html
+++ b/projects.html
@@ -108,13 +108,21 @@
       <p>judite.senkane@gmail.com</p>
       <div class="media-links mt-5">
         <div>
-          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="https://github.com/judite-senkane" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
         </div>
         <div>
-          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a
+            href="https://www.linkedin.com/in/judite-senkane-737905227"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
         </div>
         <div>
-          <a href="#"><i class="fa-solid fa-envelope"></i></a>
+          <a href="mailto:judite.senkane@gmail.com"
+            ><i class="fa-solid fa-envelope"></i
+          ></a>
         </div>
       </div>
     </footer>
