--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,7 @@
             class="img-fluid mb-3 d-none d-md-block"
           />
         </div>
-        <div class="col-md-6 mb-5 ps-5">
+        <div class="col-md-6 mb-5 ps-none ps-md-5">
           <h2 class="mb-5">Yin Yoga Project</h2>
           <p>
             Yin Yoga app is my very first project and my beginnings in HTML and
@@ -53,7 +53,7 @@
             >Launch Yin Yoga Page</a
           >
         </div>
-        <div class="col-md-6 mb-5 pe-5">
+        <div class="col-md-6 mb-2 pe-none pe-md-5">
           <h2 class="mb-5">Weather App</h2>
           <p>
             Weather app was my project for SheCodes Plus, where I used APIs and
@@ -81,7 +81,7 @@
             class="img-fluid d-none d-md-block mb-3"
           />
         </div>
-        <div class="col-md-6 ps-5">
+        <div class="col-md-6 ps-none ps-md-5">
           <h2 class="mb-5">Portfolio</h2>
           <p>
             My portfolio is my first project in multiple website pages, advanced
