Added links to project tabs in index

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
     <div class="container homepage">
       <div class="row">
         <div class="col-md-4 mt-5">
-          <a href="#"
+          <a
+            href="https://www.shecodes.io/workshops/shecodes-basics-fcd4e9f1-e58c-456e-8a39-6274d93a7b8b/projects/1167316"
+            target="_blank"
             ><img
               src="/images/yin-yoga-project.png"
               alt="Yin Yoga Project"
@@ -55,7 +57,7 @@
           <p>Front-end Developer</p>
         </div>
         <div class="col-md-4 mt-5">
-          <a href="#"
+          <a href="https://candid-faloodeh-be9ef3.netlify.app" target="_blank"
             ><img
               src="/images/weather-app.png"
               alt="Weather App"
@@ -65,7 +67,7 @@
           <p>Front-end Developer</p>
         </div>
         <div class="col-md-4 mt-5">
-          <a href="#" alt="Portfolio"
+          <a href="/" target="_blank"
             ><img
               src="/images/portfolio.png"
               alt="Portfolio"
