Adjusted padding and fixed the weather app link

--- a/projects.html
+++ b/projects.html
@@ -36,10 +36,10 @@
           <img
             src="/images/yin-yoga-project.png"
             alt="Yin Yoga Project"
-            class="img-fluid mb-3 d-none d-md-block"
+            class="img-fluid mb-3 d-none d-md-block rounded"
           />
         </div>
-        <div class="col-md-6 mb-5 ps-none ps-md-5">
+        <div class="col-md-6 mb-5 ps-md-5">
           <h2 class="mb-5">Yin Yoga Project</h2>
           <p>
             Yin Yoga app is my very first project and my beginnings in HTML and
@@ -53,7 +53,7 @@
             >Launch Yin Yoga Page</a
           >
         </div>
-        <div class="col-md-6 mb-2 pe-none pe-md-5">
+        <div class="col-md-6 mb-2 pe-md-5">
           <h2 class="mb-5">Weather App</h2>
           <p>
             Weather app was my project for SheCodes Plus, where I used APIs and
@@ -71,17 +71,17 @@
           <img
             src="/images/weather-app.png"
             alt="Weather App"
-            class="img-fluid mb-3 d-none d-md-block"
+            class="img-fluid mb-3 d-none d-md-block rounded"
           />
         </div>
         <div class="col-md-6">
           <img
             src="/images/portfolio.png"
             alt="Portfolio"
-            class="img-fluid d-none d-md-block mb-3"
+            class="img-fluid d-none d-md-block mb-3 rounded"
           />
         </div>
-        <div class="col-md-6 ps-none ps-md-5">
+        <div class="col-md-6 ps-md-5">
           <h2 class="mb-5">Portfolio</h2>
           <p>
             My portfolio is my first project in multiple website pages, advanced
