Made small adjustments to button padding

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     <footer class="mb-5 mt-5">
       <div class="work-inquiry mb-5">
         <div class="work-inquiry-heading">
-          <h3>Work Inquiry</h3>
-          <p>Let's discuss collaboration or job opportunities</p>
+          <h3 class="mb-3">Work Inquiry</h3>
+          <p>Let's discuss collaboration or work opportunities</p>
         </div>
         <div class="work-inquiry-button">
           <a href="#" class="btn btn-small-dark">Contact Me</a>
