--- a/about.html
+++ b/about.html
@@ -29,54 +29,41 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="hero">
-      <p>Hi, I am</p>
-      <h1>Judite Senkane</h1>
-      <h6 class="mb-5 mt-4">Front-end developer, based in Riga, Latvia</h6>
-      <div class="buttons">
-        <div>
-          <a href="/projects.html" class="btn btn-main">Projects</a>
+    <div class="container">
+      <div class="about-section row">
+        <div class="col-md-8">
+          <h1>Hi, I am Judite Senkane</h1>
+          <h5>Frontend Developer, based in Latvia.</h5>
         </div>
-        <div>
-          <a href="/about.html" class="btn btn-secondary">About Me</a>
-        </div>
-      </div>
-    </div>
-    <div class="container homepage">
-      <div class="row">
-        <div class="col-md-4 mt-5">
-          <a
-            href="https://www.shecodes.io/workshops/shecodes-basics-fcd4e9f1-e58c-456e-8a39-6274d93a7b8b/projects/1167316"
-            target="_blank"
-            ><img
-              src="/images/yin-yoga-project.png"
-              alt="Yin Yoga Project"
-              class="img-fluid mb-3"
-          /></a>
-          <h4>Yin Yoga Project</h4>
-          <p>Front-end Developer</p>
-        </div>
-        <div class="col-md-4 mt-5">
-          <a href="https://candid-faloodeh-be9ef3.netlify.app" target="_blank"
-            ><img
-              src="/images/weather-app.png"
-              alt="Weather App"
-              class="img-fluid mb-3"
-          /></a>
-          <h4>Weather App</h4>
-          <p>Front-end Developer</p>
-        </div>
-        <div class="col-md-4 mt-5">
-          <a href="/" target="_blank"
-            ><img
-              src="/images/portfolio.png"
-              alt="Portfolio"
-              class="img-fluid mb-3"
-          /></a>
-          <h4>Portfolio</h4>
-          <p>Front-end Developer</p>
+        <div class="col-md-4">
+          <img
+            src="/images/judite.jpeg"
+            alt="Judite's profile photo"
+            class="img-fluid rounded border p-2 border-white shadow mt-5"
+          />
         </div>
       </div>
+      <p class="about-paragraph first-paragraph ps-md-5 pe-md-5 ms-5 me-5">
+        I am a previous accountant who has recently discovered a passion for
+        coding. It is amazing what you can create with code! Those who know me
+        say that I am a creative mind, and yet I have always loved math and
+        numbers. Following a suggestion from my brother, I decided to learn more
+        about coding. I am so glad I did! Coding is a perfect combination of
+        logical, concrete thinking that creates something useful and beautiful.
+      </p>
+      <p class="about-paragraph ps-md-5 pe-md-5 ms-5 me-5">
+        I am currently studying front-end development in SheCodes workshops. I
+        have already received SheCodes Basics and SheCodes Plus certificates in
+        HTML/CSS and JavaScript and am excited to learn more. I am planning to
+        learn more back-end languages as well in the future.
+      </p>
+      <p class="about-paragraph ps-md-5 pe-md-5 ms-5 me-5 mb-5">
+        I am based in Riga, Latvia, where I grew up, even though I have spent
+        some time in places around the world. I am still learning about the
+        wonderful opportunities coding has to offer, but I am very excited to
+        learn more languages and techniques to create more advanced applications
+        and functionalities within the digital world.
+      </p>
     </div>
     <footer class="mb-5 mt-5">
       <div class="work-inquiry mb-5">
