Fixed a bug in HTML

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="hero">
       <p>Hi, I am</p>
       <h1>Judite Senkane</h1>
-      <h5>class="mb-5 mt-4">Front-end developer, based in Riga, Latvia</h5>
+      <h5 class="mb-5 mt-4">Front-end developer, based in Riga, Latvia</h5>
       <div class="buttons">
         <div>
           <a href="/projects.html" class="btn btn-main">Projects</a>
