Added contact links

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <p>Let's discuss collaboration or work opportunities</p>
         </div>
         <div class="work-inquiry-button">
-          <a href="#" class="btn btn-small-dark">Contact Me</a>
+          <a href="/contact.html" class="btn btn-small-dark">Contact Me</a>
         </div>
       </div>
       <p>judite.senkane@gmail.com</p>
