--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
   <body class="m-5">
     <div class="row">
       <div class="col-md-6">
-        <h1>Let's get in touch!</h1>
+        <h1 class="mb-5">Let's get in touch!</h1>
         <div class="paragraph">
           <p>
             If you have any tips & tricks, suggestions, or you would love to
