--- a/index.html
+++ b/index.html
@@ -29,6 +29,64 @@
     <title>Document</title>
   </head>
   <body>
+    <nav class="navbar fixed-top navbar-expand-lg bg-white">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="/" title="Home | Judite Senkane Portfolio"
+          >Judite Senkane</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Home | Judite Senkane Portfolio"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/about.html"
+                title="About | Judite Senkane Portfolio"
+                >About</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/projects.html"
+                title="Projects | Judite Senkane Portfolio"
+                >Projects</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="/contact.html"
+                title="Contact | Judite Senkane Portfolio"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <p>Hi, I am</p>
       <h1>Judite Senkane</h1>
