--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
           <a href="/contact.html" class="btn btn-small-dark">Contact Me</a>
         </div>
       </div>
-      <p>judite.senkane@gmail.com</p>
+      <div class="d-flex justify-content-center">
+        <a href="mailto:judite.senkane@gmail.com" class="email-link"
+          >judite.senkane@gmail.com</a
+        >
+      </div>
       <div class="media-links mt-5">
         <div>
           <a href="https://github.com/judite-senkane" target="_blank"
