Added more spacing at the top of the pages

--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,7 @@
     </nav>
     <div class="row">
       <div class="col-md-6">
-        <h1 class="mb-5">Let's get in touch!</h1>
+        <h1 class="mt-5 mb-5">Let's get in touch!</h1>
         <div class="paragraph">
           <p>
             If you have any tips & tricks, suggestions, or you would love to
