--- a/projects.html
+++ b/projects.html
@@ -89,7 +89,9 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center mt-5 mb-5">Projects</h1>
+    <div class="page-top">
+      <h1 class="text-center mb-5">Projects</h1>
+    </div>
     <div class="container projects">
       <div class="row">
         <div class="col-md-6 mb-5">
