--- a/index.html
+++ b/index.html
@@ -143,7 +143,9 @@
           <p>Let's discuss collaboration or work opportunities</p>
         </div>
         <div class="work-inquiry-button">
-          <a href="/contact.html" class="btn btn-small-dark">Contact Me</a>
+          <a href="/contact.html" class="btn btn-small-dark" target="_blank"
+            >Contact Me</a
+          >
         </div>
       </div>
       <div class="d-flex justify-content-center">
