--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 mt-5">
         <div class="media-links-contact mt-5">
           <div>
             <a
