--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Learn more about front-end developer Judite Senkane, who is based in Riga, Latvia."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,12 +30,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/style/portfolio.css" />
-    <title>Document</title>
+    <title>About | Judite Senkane</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Home | Judite Senkane Portfolio"
+        <a class="navbar-brand" href="/" title="Homepage | Judite Senkane"
           >Judite Senkane</a
         >
         <button
@@ -52,19 +56,18 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
                 aria-current="page"
                 href="/"
-                title="Home | Judite Senkane Portfolio"
+                title="Homepage | Judite Senkane"
                 >Home</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
-                aria-current="page"
+                class="nav-link"
                 href="/about.html"
-                title="About | Judite Senkane Portfolio"
+                title="About | Judite Senkane"
                 >About</a
               >
             </li>
@@ -72,7 +75,7 @@
               <a
                 class="nav-link"
                 href="/projects.html"
-                title="Projects | Judite Senkane Portfolio"
+                title="Projects | Judite Senkane"
                 >Projects</a
               >
             </li>
@@ -80,7 +83,7 @@
               <a
                 class="nav-link"
                 href="/contact.html"
-                title="Contact | Judite Senkane Portfolio"
+                title="Contact | Judite Senkane"
                 >Contact</a
               >
             </li>
@@ -131,19 +134,29 @@
           <p>Let's discuss collaboration or work opportunities</p>
         </div>
         <div class="work-inquiry-button">
-          <a href="/contact.html" class="btn btn-small-dark" target="_blank"
+          <a
+            href="/contact.html"
+            class="btn btn-small-dark"
+            target="_blank"
+            title="Contact | Judite Senkane"
             >Contact Me</a
           >
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <a href="mailto:judite.senkane@gmail.com" class="email-link"
+        <a
+          href="mailto:judite.senkane@gmail.com"
+          class="email-link"
+          title="Email |Judite Senkane"
           >judite.senkane@gmail.com</a
         >
       </div>
       <div class="media-links mt-5">
         <div>
-          <a href="https://github.com/judite-senkane" target="_blank"
+          <a
+            href="https://github.com/judite-senkane"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
@@ -151,11 +164,14 @@
           <a
             href="https://www.linkedin.com/in/judite-senkane-737905227"
             target="_blank"
+            title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
         <div>
-          <a href="mailto:judite.senkane@gmail.com"
+          <a
+            href="mailto:judite.senkane@gmail.com"
+            title="Email | Judite Senkane"
             ><i class="fa-solid fa-envelope"></i
           ></a>
         </div>
