--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Judite Senkane is a front-end developer based in Riga, Latvia. Contact her by using email or LinkedIn, and visit her GitHub to learn more about her code."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,12 +30,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/style/portfolio.css" />
-    <title>Document</title>
+    <title>Contact | Judite Senkane</title>
   </head>
   <body class="m-5">
     <nav class="navbar fixed-top navbar-expand-lg bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Home | Judite Senkane Portfolio"
+        <a class="navbar-brand" href="/" title="Homepage | Judite Senkane"
           >Judite Senkane</a
         >
         <button
@@ -52,37 +56,34 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
                 aria-current="page"
                 href="/"
-                title="Home | Judite Senkane Portfolio"
+                title="Homepage | Judite Senkane"
                 >Home</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                aria-current="page"
                 href="/about.html"
-                title="About | Judite Senkane Portfolio"
+                title="About | Judite Senkane"
                 >About</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                aria-current="page"
                 href="/projects.html"
-                title="Projects | Judite Senkane Portfolio"
+                title="Projects | Judite Senkane"
                 >Projects</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
-                aria-current="page"
+                class="nav-link"
                 href="/contact.html"
-                title="Contact | Judite Senkane Portfolio"
+                title="Contact | Judite Senkane"
                 >Contact</a
               >
             </li>
@@ -90,47 +91,57 @@
         </div>
       </div>
     </nav>
-    <div class="row">
-      <div class="col-md-6">
-        <h1 class="mt-5 mb-5">Let's get in touch!</h1>
-        <div class="paragraph">
-          <p>
-            If you have any tips & tricks, suggestions, or you would love to
-            discuss projects or work opportunities, please contact me via e-mail
-            or LinkedIn. Please also visit my GitHub page to see the source code
-            for my existing and future projects. Send me a message to
-            <a href="mailto:judite.senkane@gmail.com"
-              >judite.senkane@gmail.com</a
-            >
-            or click on the links!
-          </p>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <h1 class="mt-5 mb-5">Let's get in touch!</h1>
+          <div class="paragraph">
+            <p>
+              If you have any tips & tricks, suggestions, or you would love to
+              discuss projects or work opportunities, please contact me via
+              e-mail or LinkedIn. Please also visit my GitHub page to see the
+              source code for my existing and future projects. Send me a message
+              to
+              <a
+                href="mailto:judite.senkane@gmail.com"
+                title="Email | Judite Senkane"
+                >judite.senkane@gmail.com</a
+              >
+              or click on the links!
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="col-md-6 mt-5">
-        <div class="media-links-contact mt-5">
-          <div>
-            <a
-              href="https://github.com/judite-senkane"
-              target="_blank"
-              class="m-1 mb-3 p-2"
-              ><i class="fa-brands fa-github"></i
-            ></a>
-            <h4 class="text-center">Github</h4>
-          </div>
-          <div>
-            <a
-              href="https://www.linkedin.com/in/judite-senkane-737905227"
-              target="_blank"
-              class="m-1 ms-2 mb-3 p-2"
-              ><i class="fa-brands fa-linkedin"></i
-            ></a>
-            <h4 class="text-center">LinkedIn</h4>
-          </div>
-          <div>
-            <a href="mailto:judite.senkane@gmail.com" class="m-1 mb-3 p-2"
-              ><i class="fa-solid fa-envelope"></i
-            ></a>
-            <h4 class="text-center">E-mail</h4>
+        <div class="col-md-6 mt-5">
+          <div class="media-links-contact mt-5">
+            <div>
+              <a
+                href="https://github.com/judite-senkane"
+                target="_blank"
+                class="m-1 mb-3 p-2"
+                title="GitHub Profile"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+              <h4 class="text-center">Github</h4>
+            </div>
+            <div>
+              <a
+                href="https://www.linkedin.com/in/judite-senkane-737905227"
+                target="_blank"
+                class="m-1 ms-2 mb-3 p-2"
+                title="LinkedIn Profile"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <h4 class="text-center">LinkedIn</h4>
+            </div>
+            <div>
+              <a
+                href="mailto:judite.senkane@gmail.com"
+                class="m-1 mb-3 p-2"
+                title="Email | Judite Senkane"
+                ><i class="fa-solid fa-envelope"></i
+              ></a>
+              <h4 class="text-center">E-mail</h4>
+            </div>
           </div>
         </div>
       </div>
