--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Judite Senkane is a front-end developer based in Riga, Latvia."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,12 +30,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/style/portfolio.css" />
-    <title>Document</title>
+    <title>Front-end developer | Judite Senkane</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Home | Judite Senkane Portfolio"
+        <a class="navbar-brand" href="/" title="Homepage | Judite Senkane"
           >Judite Senkane</a
         >
         <button
@@ -55,7 +59,7 @@
                 class="nav-link active"
                 aria-current="page"
                 href="/"
-                title="Home | Judite Senkane Portfolio"
+                title="Homepage | Judite Senkane"
                 >Home</a
               >
             </li>
@@ -63,7 +67,7 @@
               <a
                 class="nav-link"
                 href="/about.html"
-                title="About | Judite Senkane Portfolio"
+                title="About | Judite Senkane"
                 >About</a
               >
             </li>
@@ -71,7 +75,7 @@
               <a
                 class="nav-link"
                 href="/projects.html"
-                title="Projects | Judite Senkane Portfolio"
+                title="Projects | Judite Senkane"
                 >Projects</a
               >
             </li>
@@ -79,7 +83,7 @@
               <a
                 class="nav-link"
                 href="/contact.html"
-                title="Contact | Judite Senkane Portfolio"
+                title="Contact | Judite Senkane"
                 >Contact</a
               >
             </li>
@@ -93,10 +97,20 @@
       <h5 class="mb-5 mt-4">Front-end developer, based in Riga, Latvia</h5>
       <div class="buttons">
         <div>
-          <a href="/projects.html" class="btn btn-main">Projects</a>
+          <a
+            href="/projects.html"
+            class="btn btn-main"
+            title="Projects | Judite Senkane"
+            >Projects</a
+          >
         </div>
         <div>
-          <a href="/about.html" class="btn btn-secondary">About Me</a>
+          <a
+            href="/about.html"
+            class="btn btn-secondary"
+            title="About | Judite Senkane"
+            >About Me</a
+          >
         </div>
       </div>
     </div>
@@ -106,29 +120,33 @@
           <a
             href="https://www.shecodes.io/workshops/shecodes-basics-fcd4e9f1-e58c-456e-8a39-6274d93a7b8b/projects/1167316"
             target="_blank"
+            title="Yin Yoga Project"
             ><img
               src="/images/yin-yoga-project.png"
-              alt="Yin Yoga Project"
+              alt="Yin Yoga Project Preview"
               class="img-fluid mb-3"
           /></a>
           <h4>Yin Yoga Project</h4>
           <p>Front-end Developer</p>
         </div>
         <div class="col-md-4 mt-5">
-          <a href="https://candid-faloodeh-be9ef3.netlify.app" target="_blank"
+          <a
+            href="https://candid-faloodeh-be9ef3.netlify.app"
+            target="_blank"
+            title="Weather App"
             ><img
               src="/images/weather-app.png"
-              alt="Weather App"
+              alt="Weather App Preview"
               class="img-fluid mb-3"
           /></a>
           <h4>Weather App</h4>
           <p>Front-end Developer</p>
         </div>
         <div class="col-md-4 mt-5">
-          <a href="/" target="_blank"
+          <a href="/" target="_blank" title="Homepage | Judite Senkane"
             ><img
               src="/images/portfolio.png"
-              alt="Portfolio"
+              alt="Portfolio Preview"
               class="img-fluid mb-3"
           /></a>
           <h4>Portfolio</h4>
@@ -143,19 +161,29 @@
           <p>Let's discuss collaboration or work opportunities</p>
         </div>
         <div class="work-inquiry-button">
-          <a href="/contact.html" class="btn btn-small-dark" target="_blank"
+          <a
+            href="/contact.html"
+            class="btn btn-small-dark"
+            target="_blank"
+            title="Contact | Judite Senkane"
             >Contact Me</a
           >
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <a href="mailto:judite.senkane@gmail.com" class="email-link"
+        <a
+          href="mailto:judite.senkane@gmail.com"
+          class="email-link"
+          title="Email |Judite Senkane"
           >judite.senkane@gmail.com</a
         >
       </div>
       <div class="media-links mt-5">
         <div>
-          <a href="https://github.com/judite-senkane" target="_blank"
+          <a
+            href="https://github.com/judite-senkane"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
@@ -163,11 +191,14 @@
           <a
             href="https://www.linkedin.com/in/judite-senkane-737905227"
             target="_blank"
+            title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
         <div>
-          <a href="mailto:judite.senkane@gmail.com"
+          <a
+            href="mailto:judite.senkane@gmail.com"
+            title="Email | Judite Senkane"
             ><i class="fa-solid fa-envelope"></i
           ></a>
         </div>
