--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Judite Senkane is a fron-end developer based in Riga, Latvia. Learn more about her projects and visit the links to see the projects themselves."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,12 +30,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="/style/portfolio.css" />
-    <title>Document</title>
+    <title>Projects | Judite Senkane</title>
   </head>
   <body>
     <nav class="navbar fixed-top navbar-expand-lg bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/" title="Home | Judite Senkane Portfolio"
+        <a class="navbar-brand" href="/" title="Homepage | Judite Senkane"
           >Judite Senkane</a
         >
         <button
@@ -52,28 +56,26 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
                 aria-current="page"
                 href="/"
-                title="Home | Judite Senkane Portfolio"
+                title="Homepage | Judite Senkane"
                 >Home</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
-                aria-current="page"
                 href="/about.html"
-                title="About | Judite Senkane Portfolio"
+                title="About | Judite Senkane"
                 >About</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link active"
-                aria-current="page"
+                class="nav-link"
                 href="/projects.html"
-                title="Projects | Judite Senkane Portfolio"
+                title="Projects | Judite Senkane"
                 >Projects</a
               >
             </li>
@@ -81,7 +83,7 @@
               <a
                 class="nav-link"
                 href="/contact.html"
-                title="Contact | Judite Senkane Portfolio"
+                title="Contact | Judite Senkane"
                 >Contact</a
               >
             </li>
@@ -97,7 +99,7 @@
         <div class="col-md-6 mb-5">
           <img
             src="/images/yin-yoga-project.png"
-            alt="Yin Yoga Project"
+            alt="Yin Yoga Project preview"
             class="img-fluid mb-3 d-none d-md-block rounded"
           />
         </div>
@@ -112,6 +114,7 @@
             href="https://www.shecodes.io/workshops/shecodes-basics-fcd4e9f1-e58c-456e-8a39-6274d93a7b8b/projects/1167316"
             class="btn btn-small-light mt-3"
             target="_blank"
+            title="Yin Yoga Project"
             >Launch Yin Yoga Page</a
           >
         </div>
@@ -126,20 +129,21 @@
             href="https://candid-faloodeh-be9ef3.netlify.app"
             class="btn btn-small-light mt-3"
             target="_blank"
+            title="Weather App"
             >Launch Weather App</a
           >
         </div>
         <div class="col-md-6 mb-5">
           <img
             src="/images/weather-app.png"
-            alt="Weather App"
+            alt="Weather App preview"
             class="img-fluid mb-3 d-none d-md-block rounded"
           />
         </div>
         <div class="col-md-6">
           <img
             src="/images/portfolio.png"
-            alt="Portfolio"
+            alt="Portfolio preview"
             class="img-fluid d-none d-md-block mb-3 rounded"
           />
         </div>
@@ -151,7 +155,11 @@
             have also learned how to make websites responsive to mobile phones
             and other devices.
           </p>
-          <a href="/" class="btn btn-small-light mt-3" target="_blank"
+          <a
+            href="/"
+            class="btn btn-small-light mt-3"
+            target="_blank"
+            title="Judite Senkane's Portfolio"
             >Portfolio Homepage</a
           >
         </div>
@@ -164,19 +172,29 @@
           <p>Let's discuss collaboration or work opportunities</p>
         </div>
         <div class="work-inquiry-button">
-          <a href="/contact.html" class="btn btn-small-dark" target="_blank"
+          <a
+            href="/contact.html"
+            class="btn btn-small-dark"
+            target="_blank"
+            title="Contact | Judite Senkane"
             >Contact Me</a
           >
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <a href="mailto:judite.senkane@gmail.com" class="email-link"
+        <a
+          href="mailto:judite.senkane@gmail.com"
+          class="email-link"
+          title="Email |Judite Senkane"
           >judite.senkane@gmail.com</a
         >
       </div>
       <div class="media-links mt-5">
         <div>
-          <a href="https://github.com/judite-senkane" target="_blank"
+          <a
+            href="https://github.com/judite-senkane"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
         </div>
@@ -184,11 +202,14 @@
           <a
             href="https://www.linkedin.com/in/judite-senkane-737905227"
             target="_blank"
+            title="LinkedIn Profile"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
         <div>
-          <a href="mailto:judite.senkane@gmail.com"
+          <a
+            href="mailto:judite.senkane@gmail.com"
+            title="Email | Judite Senkane"
             ><i class="fa-solid fa-envelope"></i
           ></a>
         </div>
