Fixed the navbar active links on all pages

--- a/about.html
+++ b/about.html
@@ -55,17 +55,14 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage | Judite Senkane"
+              <a class="nav-link" href="/" title="Homepage | Judite Senkane"
                 >Home</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
+                aria-current="page"
                 href="/about.html"
                 title="About | Judite Senkane"
                 >About</a
