--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,7 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage | Judite Senkane"
+              <a class="nav-link" href="/" title="Homepage | Judite Senkane"
                 >Home</a
               >
             </li>
@@ -81,7 +77,8 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link"
+                class="nav-link active"
+                aria-current="page"
                 href="/contact.html"
                 title="Contact | Judite Senkane"
                 >Contact</a
